--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -863,7 +863,7 @@ body.active { overflow: hidden; }
 
 .divider {
   height: 4px;
-  color:aliceblue
+  color:aliceblue;
   margin-block: 40px;
   border-top: 1px solid var(--rich-black-fogra-29);
   border-bottom: 1px solid hsla(0, 0%, 100%, 0.1);
@@ -1611,3 +1611,9 @@ body.active { overflow: hidden; }
 
 
 }
+
+/**
+   * SIGN IN PAGE
+   */
+
+   
