--- a/assets/css/aboutusstyle.css
+++ b/assets/css/aboutusstyle.css
@@ -79,7 +79,8 @@ pre {
     text-align: center;
     padding:15px 15px;
     margin:10px 0 0 0;
-    background-color: var(--raisin-black);
+    /* background-color: var(--raisin-black); */
+    transition: opacity 0.5s ease-in-out;
 }
 
 .contact{
