--- a/assets/css/aboutusstyle.css
+++ b/assets/css/aboutusstyle.css
@@ -57,7 +57,7 @@ body{
 
 .welcome-head{
     text-align: center;
-    margin-left:0%;
+    margin-left:5%;
     font-size:70px ;
     margin-bottom: 0%;
     margin-top:20px;
@@ -65,7 +65,7 @@ body{
 
 .second-head{
     font-size: 85px;
-    margin: 0% auto auto auto;
+    margin: 0% auto auto 7%;
     padding:5px 5px;
    
 }
@@ -80,6 +80,7 @@ pre {
 .intro{
     margin-bottom: 20px;
     display: flex;
+    margin-top: 20px;
 }
 .child-left{
     margin-right: 20%;
@@ -87,6 +88,7 @@ pre {
 .child-left, .child-right{
     display: inline;
 }
+
 /* contributors */
 .contributors p{
     margin: 15px 15px; 
@@ -95,12 +97,26 @@ pre {
     font-size: 65px; 
 }
 
+.profile{
+    display:flex;
+    margin: 3px 3px;
+    padding: 3px 3px;
+}
+
+.profile img{
+    border-radius: 40px;
+    padding: 5px 5px;
+}
+
+.profile p{
+    font-size: 22px;
+    padding: 3px 3px;
+}
 /* connect us section*/
 .contactus{
     text-align: center;
     padding:15px 15px;
     margin:10px 0 0 0;
-    /* background-color: var(--raisin-black); */
     transition: opacity 0.5s ease-in-out;
 }
 
