--- a/assets/css/aboutusstyle.css
+++ b/assets/css/aboutusstyle.css
@@ -77,6 +77,7 @@ pre {
     font-family:var(--ff-poppins);
     margin:45px 5px 5px 15px; 
 }
+
 .intro{
     margin-bottom: 20px;
     display: flex;
@@ -90,15 +91,19 @@ pre {
 }
 
 /* contributors */
-.contributors p{
-    margin: 15px 15px; 
-    padding: 7px 7px;
+.contributors{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+#contributors{
+    display: flex;
     text-align: center;
-    font-size: 65px; 
+    margin-left: 15%;
+    margin-top: 2%;
 }
 
 .profile{
-    display:flex;
+    display:inline;
     margin: 3px 3px;
     padding: 3px 3px;
 }
@@ -131,8 +136,14 @@ pre {
     font-size:50px;
 }
 
-.fa-brands:hover{
+.fa-linkedin-in:hover{
     font-size:55px;
+    color: rgb(29, 118, 153); 
+}
+
+.fa-github:hover{
+    font-size:55px;
+    color:rgb(105, 29, 175)
 }
 
 
