--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@
   --section-padding: 100px;
 
 }
-
+//import url quotes added
 @import url('https://fonts.googleapis.com/css?family=Poiret+One');
 /********************  Loading Page ************************/
 .loadFont {
