--- a/assets/css/aboutusstyle.css
+++ b/assets/css/aboutusstyle.css
@@ -1,152 +1,169 @@
 /* about us page style */
 :root {
-
-    /**
+  /**
      * colors
      */
-  
-    --rich-black-fogra-29: hsl(225, 25%, 9%);
-    --rich-black-fogra-39: hsl(170, 21%, 5%);
-    --raisin-black: hsl(228, 13%, 15%);
-    --eerie-black: hsl(207, 19%, 11%);
-    --light-gray: hsl(0, 3%, 80%);
-    --gunmetal-1: hsl(229, 15%, 21%); 
-    --gunmetal-2: hsl(216, 22%, 18%);
-    --gainsboro: hsl(0, 7%, 88%);
-    --citrine: hsl(187, 87%, 51%);
-    --xiketic: hsl(253, 21%, 13%);
-    --gray-x: hsl(0, 0%, 74%);
-    --white: hsl(0, 100%, 100%);
-    --black: hsl(0, 0%, 0%);
-    --jet: hsl(0, 0%, 20%);
-    /*typography  */
-    --ff-poppins: 'Poppins', sans-serif;
-  
-    --fs-1: 36px;
-    --fs-2: 32px;
-    --fs-3: 30px;
-    --fs-4: 24px;
-    --fs-5: 20px;
-    --fs-6: 18px;
-    --fs-7: 16px;
-    --fs-8: 15px;
-    --fs-9: 14px;
-    --fs-10: 13px;
-    --fs-11: 12px;
-    --fs-12: 11px;
-  
-    --fw-500: 500;
-    --fw-700: 700;
-    /*** transition */
-    --transition-1: 0.15s ease;
-    --transition-2: 0.25s ease-in;
-    /*** spacing*/
-    --section-padding: 100px;
-}
-body{
-    background-color:var(--eerie-black);
-    color: white;
 
-}
+  --rich-black-fogra-29: hsl(225, 25%, 9%);
+  --rich-black-fogra-39: hsl(170, 21%, 5%);
+  --raisin-black: hsl(228, 13%, 15%);
+  --eerie-black: hsl(207, 19%, 11%);
+  --light-gray: hsl(0, 3%, 80%);
+  --gunmetal-1: hsl(229, 15%, 21%);
+  --gunmetal-2: hsl(216, 22%, 18%);
+  --gainsboro: hsl(0, 7%, 88%);
+  --citrine: hsl(187, 87%, 51%);
+  --xiketic: hsl(253, 21%, 13%);
+  --gray-x: hsl(0, 0%, 74%);
+  --white: hsl(0, 100%, 100%);
+  --black: hsl(0, 0%, 0%);
+  --jet: hsl(0, 0%, 20%);
+  /*typography  */
+  --ff-poppins: "Poppins", sans-serif;
 
-.head{
-    text-align: center;
-    margin:30px 5px 7px 5px;
-    font-size: 75px;
+  --fs-1: 36px;
+  --fs-2: 32px;
+  --fs-3: 30px;
+  --fs-4: 24px;
+  --fs-5: 20px;
+  --fs-6: 18px;
+  --fs-7: 16px;
+  --fs-8: 15px;
+  --fs-9: 14px;
+  --fs-10: 13px;
+  --fs-11: 12px;
+  --fs-12: 11px;
+
+  --fw-500: 500;
+  --fw-700: 700;
+  /*** transition */
+  --transition-1: 0.15s ease;
+  --transition-2: 0.25s ease-in;
+  /*** spacing*/
+  --section-padding: 100px;
+}
+body {
+  background-color: var(--eerie-black);
+  color: white;
 }
 
-.welcome-head{
-    text-align: center;
-    margin-left:5%;
-    font-size:70px ;
-    margin-bottom: 0%;
-    margin-top:20px;
+.mainhead {
+  display: flex;
+  align-items: center;
+}
+#main-div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.second-head{
-    font-size: 85px;
-    margin: 0% auto auto 7%;
-    padding:5px 5px;
-   
+.head {
+  text-align: center;
+  margin: 30px 5px 7px 5px;
+  font-size: 75px;
+}
+
+.welcome-head {
+  display: flex;
+  text-align: center;
+  font-size: 70px;
+  margin-left: 10rem;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  width: 100%;
+}
+
+.second-head {
+  font-size: 85px;
+  margin: 0% auto auto 7%;
+  padding: 5px 5px;
 }
 
 pre {
-    text-align: left;
-    font-size: 20px;
-    padding: 0px 0px;
-    font-family:var(--ff-poppins);
-    margin:45px 5px 5px 15px; 
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  padding: 0px 0px;
+  font-family: var(--ff-poppins);
 }
 
-.intro{
-    margin-bottom: 20px;
-    display: flex;
-    margin-top: 20px;
+.intro {
+  margin-bottom: 10px;
+  display: flex;
+  margin-top: 20px;
+  width: auto;
+  align-items: center;
+  flex-direction: column;
 }
-.child-left{
-    margin-right: 20%;
+.child-left {
+  margin-right: 20%;
 }
-.child-left, .child-right{
-    display: inline;
+.child-left,
+.child-right {
+  display: inline-block;
 }
 
 /* contributors */
-.contributors{
-    margin-top: 5%;
-    margin-bottom: 5%;
+.contributors {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
-#contributors{
-    display: flex;
-    text-align: center;
-    margin-left: 15%;
-    margin-top: 2%;
-}
-
-.profile{
-    display:inline;
-    margin: 3px 3px;
-    padding: 3px 3px;
-}
-
-.profile img{
-    border-radius: 40px;
-    padding: 5px 5px;
+#contributors {
+  display: flex;
+  margin: 2rem;
+  text-align: center;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-.profile p{
-    font-size: 22px;
-    padding: 3px 3px;
+.profile {
+  display: inline;
+  margin: 3px 3px;
+  padding: 3px 3px;
+}
+
+.profile img {
+  border-radius: 40px;
+  padding: 5px 5px;
+}
+
+.profile p {
+  font-size: 22px;
+  padding: 3px 3px;
 }
 /* connect us section*/
-.contactus{
-    text-align: center;
-    padding:15px 15px;
-    margin:10px 0 0 0;
-    transition: opacity 0.5s ease-in-out;
+.contactus {
+  text-align: center;
+  padding: 15px 15px;
+  margin: 10px 0 0 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
-.contact{
-    font-size: 25px;
-    margin: 0%;
+.contact {
+  font-size: 25px;
+  margin: 0%;
 }
 
 /* icons */
-.fa-brands{
-    color: white;
-    margin:0 25px 0px 25px;
-    font-size:50px;
+.fa-brands {
+  color: white;
+  margin: 0 25px 0px 25px;
+  font-size: 50px;
 }
 
-.fa-linkedin-in:hover{
-    font-size:55px;
-    color: rgb(29, 118, 153); 
+.fa-linkedin-in:hover {
+  font-size: 55px;
+  color: rgb(29, 118, 153);
 }
 
-.fa-github:hover{
-    font-size:55px;
-    color:rgb(105, 29, 175)
+.fa-github:hover {
+  font-size: 55px;
+  color: rgb(105, 29, 175);
 }
-
-
-
-
